# Rtype

./: .gitignore  Makefile  README.md  backupCmake  room.txt
.github/: pull_request_template.md  release.yml
.github/workflows/: development.yaml  release.yaml
ECS/: ECS.hpp  ECSClient.hpp  ECSServer.hpp
ECS/inc/: AssetManager.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  Entity.hpp  EntityManager.hpp  EnumProtocol.hpp  Event.hpp  EventManager.hpp  Graphic.hpp  Signature.hpp  System.hpp  SystemManager.hpp  SystemsInc.hpp
ECS/inc/components/: ComponentType.hpp  Controllable.hpp  Damage.hpp  Falling.hpp  FlappyHitBox.hpp  HealthPoint.hpp  Hitbox.hpp  Movable.hpp  Path.hpp  Position.hpp  Score.hpp  Sound.hpp  SpawnClock.hpp  SpawnInfo.hpp  Sprite.hpp  StaticType.hpp  Velocity.hpp
ECS/inc/systems/: CollisionSystem.hpp  ControlSystem.hpp  EventSystem.hpp  FlappyCollisionSystem.hpp  GraphicSystem.hpp  GraphicalSystem.hpp  GravitySystem.hpp  HealthSystem.hpp  Logger.hpp  MovableSystem.hpp  NetworkClientSystem.hpp  NetworkRoomSystem.hpp  NetworkServerSystem.hpp  ParallaxSystem.hpp  PathSystem.hpp  PhysicSystem.hpp  ScoreSystem.hpp  SoundSystem.hpp  SpawnSystem.hpp  StaticSystem.hpp
ECS/include/: Controllable.hpp  Drawable.hpp  Entity.hpp  SparseArray.hpp  Sparse_away.cpp
ECS/src/: AssetManager.cpp  ComponentArray.cpp  ComponentManager.cpp  Coordinator.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp  SystemManager.cpp
ECS/src/systems/: CollisionSystem.cpp  ControlSystem.cpp  EventSystem.cpp  FlappyCollisionSystem.cpp  GraphicSystem.cpp  GraphicalSystem.cpp  GravitySystem.cpp  HealthSystem.cpp  Logger.cpp  MovableSystem.cpp  NetworkClientSystem.cpp  NetworkRoomSystem.cpp  NetworkServerSystem.cpp  ParallaxSystem.cpp  PathSystem.cpp  PhysicSystem.cpp  ScoreSystem.cpp  SoundSystem.cpp  SpawnSystem.cpp  StaticSystem.cpp
Game/: Makefile  R-TYpe
Game/ECS/: main.cpp  registery.cpp
Game/ECS/include/: IGameObject.hpp  Position.hpp  Registry.hpp  Velocity.hpp
Game/inc/: components.h  entity.h
Game/src/: Game.cpp  Game.h  main  main.cpp
client/: CMakeLists.txt
client/inc/: Chat.hpp  Client.hpp  ClientMain.hpp  Menu.hpp  Parallax.hpp
client/src/: Chat.cpp  Client.cpp  ClientMain.cpp  Main.cpp  Parallax.cpp
docs/: CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  network-RFC.txt
docs/themes/: header.html
flappy/: CMakeLists.txt
flappy/inc/: Creator.hpp  ECSFlappy.hpp
flappy/src/: Creator.cpp  Main.cpp
server/: CMakeLists.txt
server/inc/: Client.hpp  ComponentArray.hpp  ComponentManager.hpp  EntityManager.hpp  RoomManager.hpp  Server.hpp  ServerMain.hpp  Signature.hpp  System.hpp  SystemManager.hpp  main.hpp  room.hpp
server/inc/components/: Velocity.hpp
server/inc/systems/: PhysicSystem.hpp
server/src/: Client.cpp  ComponentManager.cpp  EntityManager.cpp  RoomManager.cpp  Server.cpp  ServerMain.cpp  SystemManager.cpp  main.cpp  room.cpp
